--- a/index.html
+++ b/index.html
@@ -871,8 +871,8 @@
                 if (row.length >= 5) {
                     let dateStr = row[0].trim();
                     
-                    // Fix date if it's off by one day (Apps Script timezone issue)
-                    // Check if the day name doesn't match the actual day
+                    // Fix date if the day name doesn't match the actual day
+                    // (Apps Script timezone issue causes off-by-one day names)
                     const dateMatch = dateStr.match(/^(\w+),\s+(\w+)\s+(\d+)$/);
                     if (dateMatch) {
                         const dayName = dateMatch[1];
@@ -892,13 +892,9 @@
                             const testDate = new Date(year, monthIndex, dayNum);
                             const actualDayName = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'][testDate.getDay()];
                             
-                            // If the day name doesn't match, it's off by one - add a day
+                            // If the day name doesn't match, replace it with the correct day name
                             if (actualDayName !== dayName) {
-                                const correctedDate = new Date(year, monthIndex, dayNum + 1);
-                                const correctedDayName = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'][correctedDate.getDay()];
-                                const correctedMonth = ['January', 'February', 'March', 'April', 'May', 'June',
-                                    'July', 'August', 'September', 'October', 'November', 'December'][correctedDate.getMonth()];
-                                dateStr = `${correctedDayName}, ${correctedMonth} ${correctedDate.getDate()}`;
+                                dateStr = `${actualDayName}, ${monthName} ${dayNum}`;
                             }
                         }
                     }
