--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
         /* Network Colors - Neumorphic Gradients */
         .channel-espn { background: linear-gradient(135deg, #1d4ed8 0%, #1e40af 100%); }
         .channel-abc { background: linear-gradient(135deg, #00a651 0%, #059669 100%); }
-        .channel-fox { background: linear-gradient(135deg, #0052CC 0%, #0047B2 100%); }
+        .channel-fox { background: linear-gradient(135deg, #FFB81C 0%, #FFC72C 100%); }
         .channel-cbs { background: linear-gradient(135deg, #c41e3a 0%, #a71930 100%); }
         .channel-nbc { background: linear-gradient(135deg, #f47920 0%, #ea580c 100%); }
         .channel-peacock { background: linear-gradient(135deg, #553399 0%, #6d28d9 100%); }
