--- a/index.html
+++ b/index.html
@@ -917,6 +917,7 @@
 
         // Sport emoji mapping
         const sportEmojis = {
+            'Olympics': '🏅',
             'NCAAF': '🏈',
             'NFL': '🏈',
             'NBA': '🏀',
